# Vozhi

./: .env.example  .gitignore  PROJECT_AUDIT.md  README.md  SCRAPE_INDEXING_REPORT.md  SYSTEM_ARCHITECTURE_FLOW.md  govassist_architecture.md.resolved  package-lock.json  pyproject.toml  requirements.txt  scrape.py  streamlit_app.py  test_graph.py
data/raw/: scheme.json
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
govassist/agents/: graph.py  nodes.py  state.py
govassist/api/: api.py  app.py  chat_history.db  db.py  db_utils.py
govassist/ingestion/: scraper.py
govassist/integrations/: sarvam.py  twilio.py
govassist/rag/: graph_store.py  llm.py  pipeline.py  vector_store.py
govassist/storage/: checkpointer.py
