[project]
name = "govassist-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.135.2",
    "groq",
    "langchain-core>=1.2.22",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.3",
    "llama-index-core>=0.14.18",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-groq>=0.5.0",
    "numpy>=2.4.3",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "twilio>=9.10.4",
    "uvicorn>=0.42.0",
]
